# Kryptonite-ML-Challenge-2026

./: .dockerignore  .gitignore  AGENTS.md  README.md  compose.gpu.yml  compose.yml  pyproject.toml  run.sh
.github/workflows/: python-smoke.yml
apps/api/: AGENTS.md  README.md  main.py
artifacts/: .gitignore
assets/: README.md
assets/int8/: calibration_catalog.json
baseline/: AGENTS.md  README.md  calc_metrics.py  convert_to_onnx.py  inference_onnx.py  requirements.txt  test_model.py  train.py
baseline/configs/: baseline.json  participants_baseline_fixed.json
baseline/src/: dataset.py  ecapa.py  mel_frontend.py  metrics.py  model.py
code/campp/: README.md  __init__.py  build_submission.py  common.py  eval_campp.py  finetune_campp.py  make_duration_matched_sample.py  prepare_data.py  repair_mlflow.py  retrieval.py  run_ms42_submission.py  run_soft_cycle.py
configs/: README.md  base.toml  schema.json
configs/corruption/: codec-bank.toml  corrupted-dev-suites.toml  far-field-bank.toml  noise-bank.toml  rir-bank.toml
configs/data-acquisition/: ffsvc2022-surrogate.toml
configs/data-inventory/: allowed-sources.toml  dataton-rules-matrix.toml
configs/data-sync/: gpu-server.toml
configs/deployment/: infer-gpu.toml  infer.toml  train.toml
configs/eval/: final-benchmark-pack.example.toml  teacher-student-robust-dev.example.toml  verification-protocol.toml
configs/release/: backend-benchmark.toml  final-family-decision.toml  int8-feasibility.toml  onnx-parity.toml  release-postmortem-v2.toml  speed-family-comparison.toml  speed-family-modelopt-maxopt5.toml  submission-bundle.example.toml  tas-norm-experiment.toml  tensorrt-fp16-ms1-b128-segment6.toml  tensorrt-fp16-ms1-b256-segment6.toml  tensorrt-fp16-ms1-single-segment6.toml  tensorrt-fp16-ms1.toml  tensorrt-fp16-ms32-b128-segment6-modelopt-maxopt5.toml  tensorrt-fp16-ms32-b128-segment6.toml  tensorrt-fp16-ms32.toml  tensorrt-fp16-official-eres2net-h9-modelopt-maxopt5.toml  tensorrt-fp16-w2vbert2-stage3.toml  tensorrt-fp16.toml  w2v1j-stage3-safe-speed.toml
configs/training/: campp-baseline.toml  campp-consistency.toml  campp-distillation.toml  campp-ffsvc2022-restricted-rules.toml  campp-ffsvc2022-surrogate.toml  campp-ms1-official-participants-lowlr.toml  campp-ms1-official-participants-voxblink2-augment.toml  campp-ms31-cnceleb-mixed-lowlr.toml  campp-ms31-official-pseudo-filtered-lowlr.toml  campp-ms32-strict-consensus-pseudo-lowlr.toml  campp-ms34-clean-finish-real-labels.toml  campp-ms36-multiteacher-soft-pseudo-lowlr.toml  campp-ms37-cnceleb-mixed-subcenter-lmft.toml  campp-ms37-cnceleb-mixed-subcenter-lowlr.toml  campp-ms39-ms31-bn-adapter-cnceleb.toml  campp-ms39-ms31-bn-adapter-pseudo.toml  campp-ms39b-ms32-bn-adapter-cnceleb.toml  campp-ms39b-ms32-bn-adapter-pseudo-refresh.toml  campp-participants-candidate.toml  campp-stage2-smoke.toml  campp-stage2.toml  campp-stage3-smoke.toml  (+9 more)
deployment/: README.md  artifacts.toml
docs/: README.md  audio-augmentation-scheduler.md  audio-codec-simulation.md  audio-corrupted-dev-suites.md  audio-embedding-atlas.md  audio-far-field-simulation.md  audio-fbank-extraction.md  audio-feature-cache.md  audio-loader.md  audio-loudness-normalization.md  audio-normalization.md  audio-rir-bank.md  audio-silence-augmentation.md  audio-vad-trimming.md  backend-benchmark.md  campp-baseline.md  campp-consistency.md  campp-hyperparameter-sweep-shortlist.md  campp-stage2-training.md  campp-stage3-training.md  challenge-experiment-history.md  challenge-solution-report.md  ci.md  clean-room-fallback-baseline.md  code-architecture.md  cohort-embedding-bank.md  configuration.md  data.md  dataset-inventory.md  embedding-scoring.md  end-to-end-regression-suite.md  enrollment-embedding-cache.md  eres2netv2-baseline.md  evaluation-package.md  experiment-matrix-v1.md  experiment_log.md  ffsvc2022-surrogate-audio-quality.md  ffsvc2022-surrogate-data-issues.md  ffsvc2022-surrogate.md  final-benchmark-pack.md  (+26 more)
notebooks/: AGENTS.md  README.md
research/: README.md
scripts/: README.md  acquire_ffsvc2022_surrogate.py  apply_modelopt_onnx_autocast.py  augmentation_scheduler_report.py  benchmark_campp_tensorrt.py  build_backend_benchmark_report.py  build_campp_weight_soup.py  build_codec_bank.py  build_cohort_embedding_bank.py  build_corrupted_dev_suites.py  build_dataton_rules_matrix.py  build_eda_review_package.py  build_embedding_atlas.py  build_enrollment_cache.py  build_experiment_matrix.py  build_far_field_bank.py  build_final_benchmark_pack.py  build_final_family_decision.py  build_generic_tensorrt_engine.py  build_int8_feasibility_report.py  build_manifest_embedding_atlas.py  build_model_task_contract.py  build_multi_teacher_soft_pseudo_manifests.py  build_noise_bank.py  build_onnx_parity_report.py  build_participant_training_manifests.py  build_pseudo_label_manifests.py  build_release_postmortem.py  build_rir_bank.py  build_submission_bundle.py  build_system_architecture.py  build_tas_norm_experiment.py  build_teacher_student_robust_dev_report.py  build_tensorrt_fp16_engine.py  build_triton_model_repository.py  build_validation_cycle_package.py  build_verification_protocol.py  build_voxblink_v1_audio.py  calibrate_verification_thresholds.py  collect_speed_family_results.py  (+69 more)
tests/: README.md
utils/: download_artifacts.py  validate_submission.py
(+704 files in other folders)
