[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kryptonite-ml-challenge-2026"
version = "0.1.0"
description = "Monorepo scaffold for the Kryptonite Dataton 2026 speaker-recognition project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.3",
    "polars>=1.39.3",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.13.0",
  "ty>=0.0.24",
]
infer = [
  "fastapi>=0.135.1",
  "onnxruntime>=1.24.4",
  "uvicorn>=0.42.0",
]
train = [
  "hydra-core>=1.3.2",
  "onnx>=1.20.1",
  "onnxruntime>=1.24.4",
  "silero-vad>=6.2.1,<7",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "typer>=0.24.1",
]
tracking = [
  "mlflow>=3.10.1",
  "wandb>=0.25.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kryptonite"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
