[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kryptonite-ml-challenge-2026"
version = "0.1.0"
description = "Monorepo scaffold for the Kryptonite Dataton 2026 speaker-recognition project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.2.0",
    "polars>=1.39.3",
    "pyarrow>=16.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "scipy>=1.13.0",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.4.0",
]

[project.optional-dependencies]
modelscope = ["modelscope>=1.24.0"]

[dependency-groups]
dev = [
  "jsonschema>=4.25.1",
  "onnx>=1.20.1",
  "onnxruntime>=1.20.0",
  "peft>=0.18.1",
  "pytest>=8.4.0",
  "ruff>=0.15.10",
  "silero-vad>=6.2.1,<7",
  "ty>=0.0.31",
]
submit_common = [
  "numpy>=2.4.3",
  "pandas>=2.2.0",
  "polars>=1.39.3",
  "pyarrow>=16.1.0",
  "pyyaml>=6.0.1",
  "requests>=2.32.0",
  "scipy>=1.13.0",
  "soundfile>=0.13.1",
  "soxr>=1.0.0",
]
submit_campp = [
  "torchaudio>=2.10.0",
]
submit_w2v_trt = [
  "peft>=0.18.1",
  "transformers>=5.4.0",
]
infer = [
  "fastapi>=0.135.1",
  "nvidia-cublas-cu12>=12.8.4.1",
  "nvidia-cuda-nvrtc-cu12>=12.8.93",
  "nvidia-cuda-runtime-cu12>=12.8.90",
  "nvidia-cudnn-cu12>=9.10.2.21",
  "nvidia-cufft-cu12>=11.3.3.83",
  "onnxruntime-gpu>=1.24.4",
  "uvicorn>=0.42.0",
]
train = [
  "faiss-cpu==1.13.2",
  "hydra-core>=1.3.2",
  "onnx>=1.20.1",
  "onnxruntime-gpu>=1.24.4",
  "onnxscript>=0.6.2",
  "pandas==2.2.2",
  "peft>=0.18.1",
  "setuptools>=81.0.0",
  "silero-vad>=6.2.1,<7",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "transformers>=5.4.0",
  "typer>=0.24.1",
]
tracking = [
  "mlflow>=3.10.1",
  "wandb>=0.25.1",
]
eda = [
    "matplotlib>=3.10.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kryptonite"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "code", "utils", "tests"]
target-version = "py312"
extend-exclude = ["research/notebooks"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
